--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
     background-image:       url("images/background.webp");
     background-size:        cover;
     background-repeat:      no-repeat;
-    background-position:    top;
+    background-position:    left bottom;
     background-attachment:  fixed;
     background-color:       none;
 }
@@ -50,7 +50,7 @@ body {
     margin-top:     2vh;
     padding:        2vh 3vh 4vh 3vh;
 
-    background:     lightgoldenrodyellow;
+    background:     rgba(250, 250, 210, 0.9);
     border:         1px solid darkgray;
     border-radius:  2vh;
     box-shadow:     0px 0px 10px rgba(0, 0, 0, 0.1);
